webgejmikaDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgejmikaback
  labels:
    app: webgejmikaback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webgejmikaback
  template:
    metadata:
      labels:
        app: webgejmikaback
    spec:
      containers:
        - name: webgejmikaback
          image: programerikadh/webgejmikabackarm
          ports:
            - containerPort: 8080
