webgejmikaService.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgejmikaback
  labels:
    app: webgejmikaback
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: webgejmikaback
