websiteIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websiteingress
  namespace: programerika
  annotations:     
    cert-manager.io/issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - programerika.com
      - www.programerika.com
      secretName: website2025-prod-tls
  rules:
  - host: www.programerika.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website2025
            port:
              number: 3000
  - host: programerika.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website2025
            port:
              number: 3000
